--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-transitions-css": "file:.."
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
